--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ p
     bottom: 0;
 }
 
-.card .details .photographer
+.photographer
 {
     color: #fff;
     display: flex;
@@ -152,6 +152,87 @@ p
     border-radius: 10px;
 }
 
-.card .details 
+.lightbox
 {
+    position: fixed;
+    display: none;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.65);
+}
+
+.lightbox .wrapper
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 80%;
+    max-width: 100%;
+    padding: 20px;
+    background: #FFEBD8;
+    border-radius: 5px;
+    transform: translate(-50%, -50%);
+}
+
+.wrapper header
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+} 
+
+header .photographer
+{
+    color: #333;
+}
+
+header .photographer i
+{
+    font-size: 1.7rem;
+}
+
+header .photographer span
+{
+    font-size: 1.2rem;
+    padding: 10px;
+}
+
+header .buttons i
+{
+    width: 40px;
+    height: 40px;
+    font-size: 1.2rem;
+    color: #fff;
+    text-align: center;
+    line-height: 40px;
+    cursor: pointer;
+    background: #492E87;
+    display: inline-block;
+}
+
+.buttons i:last-child
+{
+    margin-left: 10px;
+    background: #7F8487;
+}
+
+.preview-img
+{
+    display: flex;
+    margin-top: 25px;
+    justify-content: center;
+}
+
+.wrapper .preview-img .img
+{
+    max-height: 65vh;
+    max-width: 90vh;
+}
+
+.preview-img .img img
+{
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
 }
